--- a/Website/index.html
+++ b/Website/index.html
@@ -13,11 +13,16 @@
     <h1>Welcome to my profile!</h1>
 
     <h3>
-        Things I like:
+        Hobbies:
     </h3>
+        <ul>
+            <li>Piano</li>
+            <li>Violin</li>
+            <li>Data Science</li>
+        </ul>
 
     <h3>
-        
+
     </h3>
 
 </body>
