--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
     height="100" width="100">
 
     <h3>
+        Games I like:
+    </h3>
+        <ul>
+            <li>Fire Emblem</li>
+            <li>Persona</li>
+            <li>Super Smash Bros</li>
+        </ul>
+        
+    <h3>
         Contact Info:
     </h3>
     <p style="text-indent: 40px">
@@ -40,6 +49,8 @@
     <p style="text-indent: 40px">
         Email: choiyt@hotmail.com
     </p>
+
+   
 </body>
 
 
